<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/text1"/>
    <EditText
        android:id="@+id/ed_na"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_toRightOf="@+id/text1"
        android:inputType="textPersonName"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@+id/ed_na"
        android:id="@+id/text2"/>
    <EditText
        android:id="@+id/ed_ph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/ed_na"
        android:layout_toRightOf="@+id/text2"
        android:inputType="numberDecimal"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/ed_ph"
        android:id="@+id/text3"/>
    <EditText
        android:id="@+id/ed_em"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/ed_ph"
        android:layout_toRightOf="@+id/text3"
        android:inputType="textPersonName"
        android:text=""/>

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_em"
        android:text="@string/sure"/>
    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_em"
        android:layout_toRightOf="@+id/b1"
        android:text="@string/exit"/>
    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_em"
        android:layout_toRightOf="@+id/b2"
        android:text="@string/drop"/>

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_em"
        android:layout_toRightOf="@+id/b3"
        android:text="@string/cre"/>
    <TextView
        android:id="@+id/rr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1"
        android:text="@string/result"/>

</RelativeLayout>